--- a/templates/base.html
+++ b/templates/base.html
@@ -40,13 +40,13 @@
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <![endif]-->
-
+{#TODO cambiar el menu para que no se oculte y se muestre a cada rato #}
 
     {% block extra_head %}
     {% endblock extra_head %}
 </head>
 
-<body id="body" class="up-scroll">
+<body id="body" class="static">
 <!-- ====================================
   ——— PRELOADER
   ===================================== -->
