--- a/templates/courses/event_create.html
+++ b/templates/courses/event_create.html
@@ -59,17 +59,6 @@
                 <input type="text" class="form-control" id="title" name="title"/>
             </div>
             <div class="form-group">
-                <label for="image">
-                    Imagen
-                </label>
-{#                <div class="custom-file">#}
-{#                   <input type="file" class="custom-file-input" id="image_file">#}
-{#                   <label class="custom-file-label" for="image_file">Elegir imagen...</label>#}
-{##}
-{#                   <div class="invalid-feedback">Imagen inválida</div>#}
-{#                </div>#}
-            </div>
-            <div class="form-group">
                 <label for="description">
                     Descripción
                 </label>
@@ -149,11 +138,11 @@
 
             <div class="form-group">
                 <label for="title">
-                    Más detalles sobre la fecha y el horario.
+                    Detalles sobre la fecha y el horario.
                 </label>
                 <input type="text" class="form-control" id="" name="schedule_description"/>
                 <small id="" class="form-text text-muted">
-                    Una descripción extra sobre el calendario y la hora.
+                    Una descripción extra sobre el calendario (opcional).
                 </small>
             </div>
 
