--- a/templates/courses/event_edit.html
+++ b/templates/courses/event_edit.html
@@ -12,7 +12,7 @@
     <div class="row">
     <div class="col-sm-8 offset-lg-2 col-lg-8">
          <div class="bg-warning rounded-top p-2">
-            <h3 class="text-white font-weight-bold mb-0 ml-2">Crea, Comparte</h3>
+            <h3 class="text-white font-weight-bold mb-0 ml-2">Editar {{ event.title }}</h3>
           </div>
     <div class="mb-4 mb-sm-0">
 {#    TODO esconder y mostrar campos dependiendo del tipo de evento#}
@@ -44,7 +44,7 @@
             </div>
 
             <div class="form-check" id="event_recurrent">
-                <input type="checkbox" class="form-check-input" name="event_recurrent"/>
+                <input type="checkbox" class="form-check-input" name="event_recurrent" id="check_event_recurrent"/>
                 <label class="form-check-label" for="event_recurrent">
                     Evento Recurrente - <strong> Un evento que se repite, y se repite y ...</strong>
                 </label>
@@ -56,30 +56,26 @@
                 <label for="title">
                     Titulo
                 </label>
-                <input type="text" class="form-control" id="title" name="title"/>
+                <input type="text" class="form-control" id="title" name="title" value="{{ event.title }}"/>
             </div>
-            <div class="form-group">
-                <label for="image">
-                    Imagen
-                </label>
-{#                <div class="custom-file">#}
-{#                   <input type="file" class="custom-file-input" id="image_file">#}
-{#                   <label class="custom-file-label" for="image_file">Elegir imagen...</label>#}
-{##}
-{#                   <div class="invalid-feedback">Imagen inválida</div>#}
-{#                </div>#}
-            </div>
+
             <div class="form-group">
                 <label for="description">
                     Descripción
                 </label>
-                <textarea class="form-control" id="description" rows="7" name="description"></textarea>
+                <textarea class="form-control" id="description" rows="7" name="description">
+                    {{ event.description }}
+                </textarea>
             </div>
 
             <label class="my-1 mr-2" for="">Plataforma</label>
               <select class="custom-select my-1 mr-sm-2" id="platform_select" name="platform_name">
                     {% for platform in platforms %}
-                        <option value="{{ platform.name }}">{{ platform.name }}</option>
+                        {% if platform.name == event.platform.name %}
+                            <option selected= value="{{ platform.name }}">{{ platform.name }}</option>
+                        {% else %}
+                            <option value="{{ platform.name }}">{{ platform.name }}</option>
+                        {% endif %}
                     {% endfor %}
               </select>
                 <small class="form-text text-muted">
@@ -149,11 +145,11 @@
 
             <div class="form-group">
                 <label for="title">
-                    Más detalles sobre la fecha y el horario.
+                    Detalles sobre la fecha y el horario.
                 </label>
                 <input type="text" class="form-control" id="" name="schedule_description"/>
                 <small id="" class="form-text text-muted">
-                    Una descripción extra sobre el calendario y la hora.
+                    Una descripción extra sobre el calendario (opcional).
                 </small>
             </div>
 
@@ -184,58 +180,96 @@
 {% block extra_js %}
 <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
 
-    <script>
-        $( document ).ready(function() {
-            $('.datepicker').datepicker({
-                format: 'dd/mm/yyyy',
-            });
+<script>
+    $( document ).ready(function() {
 
-            $('#radio_live_course').prop("checked", true);
+        function isPreRecorded(){
+            // Es un video grabado.
+            $("#input_date_start").hide();
+            $("#input_date_end").hide();
+            $("#input_time_day").hide();
+            $("#event_recurrent").hide();
+            $('#input_record_date').show();
+        }
+
+        function isLiveCourse(){
+            // es un curso
+            $("#input_date_start").show();
+            $("#input_date_end").show();
+            $("#input_time_day").show();
             $("#event_recurrent").hide();
             $('#input_record_date').hide()
+        }
 
-            $("#submit_form").on("click", function () {
-                console.log("SUBMIT!!")
-                $("#event_create_form").submit();
-            })
+        function isEvent() {
+            // es un evento
+            $("#input_date_start").show();
+            $("#input_date_end").show();
+            $("#input_time_day").show();
+            $("#event_recurrent").show();
+            $('#input_record_date').hide()
+        }
 
-            $('.timepicker').timepicker({
-                timeFormat: 'h:mm p',
-                interval: 30,
-                minTime: '6',
-                defaultTime: '12',
-                dynamic: false,
-                dropdown: true,
-                scrollbar: true
-            });
-            tinymce.init({
-              selector: '#description'
-            });
 
-            $('#radio_pre_recorded').on("click", function(){
-                // Es un video grabado.
-                $("#input_date_start").hide();
-                $("#input_date_end").hide();
-                $("#input_time_day").hide();
-                $("#event_recurrent").hide();
-                $('#input_record_date').show()
-            });
-
-            $('#radio_event_single').on("click", function(){
-                $("#input_date_start").show();
-                $("#input_date_end").show();
-                $("#input_time_day").show();
-                $("#event_recurrent").show();
-                $('#input_record_date').hide()
-            });
-
-            $('#radio_live_course').on("click", function(){
-                $("#input_date_start").show();
-                $("#input_date_end").show();
-                $("#input_time_day").show();
-                $("#event_recurrent").hide();
-                $('#input_record_date').hide()
-            });
+        $('.datepicker').datepicker({
+            format: 'dd/mm/yyyy',
         });
-    </script>
+
+        let event_type = "{{ event.event_type }}"
+        let is_recurrent = "{{ event.is_recurrent }}"
+        let is_recorded = "{{ event.is_recorded }}"
+
+        console.log(event_type);
+        console.log(is_recorded);
+
+        if (event_type === "COURSE"){
+            if (is_recorded === "True"){
+                $('#radio_pre_recorded').prop("checked", true);
+                isPreRecorded();
+            } else {
+                $('#radio_live_course').prop("checked", true);
+                isLiveCourse();
+            }
+        } else if (event_type === "EVENT"){
+            $('#radio_event_single').prop("checked", true);
+            isEvent();
+            if (is_recurrent === "True"){
+                $('#check_event_recurrent').prop("checked", true);
+            }
+        }
+
+        $("#submit_form").on("click", function () {
+            console.log("SUBMIT!!")
+            $("#event_create_form").submit();
+        })
+
+        $('.timepicker').timepicker({
+            timeFormat: 'h:mm p',
+            interval: 30,
+            minTime: '6',
+            defaultTime: '12',
+            dynamic: false,
+            dropdown: true,
+            scrollbar: true
+        });
+        tinymce.init({
+          selector: '#description'
+        });
+
+        $('#radio_pre_recorded').on("click", function(){
+            // Es un video grabado.
+            isPreRecorded();
+        });
+
+        $('#radio_event_single').on("click", function(){
+            // es un evento
+            isEvent();
+        });
+
+        $('#radio_live_course').on("click", function(){
+            // es un curso
+            isLiveCourse();
+        });
+    });
+</script>
 {% endblock %}
