--- a/templates/profiles/profile_data.html
+++ b/templates/profiles/profile_data.html
@@ -47,6 +47,12 @@
                     {% endfor %}
                 </ul>
             </span>
+            <span class="text-muted font-size-15 mb-1 d-block">
+                <strong>
+                    Zona Horaria:
+                </strong>
+                {{ profile.timezone }}
+            </span>
           </div>
         </div>
 
@@ -87,6 +93,21 @@
           </div>
 
           <div class="col-sm-6 col-xs-12">
+            <div class="form-group" id="input_time_zone">
+                <select class="custom-select my-1 mr-sm-2 border-info" id="time_zone_select" name="time_zone">
+                  <option id="GMT+2" value="GMT+2" selected>GMT + 2</option>
+                  <option value="GMT+1">GMT + 1</option>
+                  <option value="GMT+3">GMT - 3</option>
+                  <option value="GMT+4">GMT - 4</option>
+                  <option value="GMT+5">GMT - 5</option>
+                  <option value="GMT+6">GMT - 6</option>
+                  <option value="GMT+7">GMT - 7</option>
+                  <option value="GMT+8">GMT - 8</option>
+                  <option value="GMT+9">GMT - 9</option>
+                  <option value="GMT">GMT + 0</option>
+                </select>
+          </div>
+
            <div class="form-group form-group-icon">
               <i class="fa fa-smile-o"></i>
                <textarea name="interests" type="text" class="form-control border-info" placeholder="Tus Intereses">{{ profile.interests }}
