--- a/templates/courses/event_create.html
+++ b/templates/courses/event_create.html
@@ -6,7 +6,7 @@
 {% endblock extra_head %}
 
 {% block content %}
-{#    <h2>Crea</h2>#}
+{#TODO advertir al usuarioq ue tiene que tener metodo de contacto y criptos preferidas y time zone setteado#}
     <section class="py-8 py-md-10">
     <div class="container">
     <div class="row">
