--- a/templates/courses/event_create.html
+++ b/templates/courses/event_create.html
@@ -16,7 +16,7 @@
           </div>
     <div class="mb-4 mb-sm-0">
         <hr>
-        <form method="post" id="event_create_form" role="form" action="{% url 'event_create' %}">
+        <form method="post" id="event_create_form" role="form" action="{% url 'event_create' %}" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="form-group">
                 <label for="Tipo">
