--- a/templates/courses/event_detail.html
+++ b/templates/courses/event_detail.html
@@ -43,6 +43,10 @@
                         <div class="text-right">
                             <button id="edit_event" type="button" class="btn btn-primary"><i class="fa fa-edit"></i> Editar</button>
                         </div>
+                    {% else %}
+                        <div class="text-right">
+                            <button id="edit_event" type="button" class="btn btn-info"><i class="fa fa-star"></i> Me Interesa - Guardar</button>
+                        </div>
                     {% endif %}
 						<h3 class="card-title text-dark">{{ event.title }}</h3>
 						<p class="">{{ event.description|safe }}</p>
