--- a/templates/profiles/profile_bookmarks.html
+++ b/templates/profiles/profile_bookmarks.html
@@ -9,22 +9,22 @@
                   Puedes guardar los cursos y eventos que te interesan dando click en "Me Interesa" dentro de la página del curso o evento.
                   En esta página podrás solicitar un certificado al organizador.
               </p>
-                  <div class="text-white rounded bg-warning text-uppercase font-weight-medium px-6 py-3 mb-3">Tus Cursos y Eventos Guardados</div>
-                {% for b in bookmarked_events %}
+                 <div class="text-white rounded bg-warning text-uppercase font-weight-medium px-6 py-3 mb-3">Tus Cursos y Eventos Guardados</div>
+                {% for b in bookmarks %}
                  <div class="media media-list-view mb-5">
                     <div class="media-body">
                     <h3 class="mb-3 mb-lg-2 mb-xl-3">
-                        {% if b.event.event_type == "COURSE" %}
-                            <a class="text-info text-capitalize font-weight-bold" href="{% url 'event_detail' b.event.id %}">
-                            {{ b.event.title }}</a>
-                        {% elif b.event.event_type == "EVENT" %}
-                            <a class="text-success text-capitalize font-weight-bold" href="{% url 'event_detail' b.event.id %}">
-                            {{ b.event.title }}</a>
+                        {% if b.0.event.event_type == "COURSE" %}
+                            <a class="text-info text-capitalize font-weight-bold" href="{% url 'event_detail' b.0.event.id %}">
+                            {{ b.0.event.title }}</a>
+                        {% elif b.0.event.event_type == "EVENT" %}
+                            <a class="text-success text-capitalize font-weight-bold" href="{% url 'event_detail' b.0.event.id %}">
+                            {{ b.0.event.title }}</a>
                         {% endif %}
                     </h3>
                     <p>
-                        {% if b.event.event_type == "COURSE" %}
-                            {% if b.event.is_recorded %}
+                        {% if b.0.event.event_type == "COURSE" %}
+                            {% if b.0.event.is_recorded %}
                                 <small class="text-muted">
                                     <i class="fa fa-play-circle mr-2" aria-hidden="true"></i>Curso Grabado
                                 </small>
@@ -33,8 +33,8 @@
                                     <i class="fa fa-video-camera mr-2" aria-hidden="true"></i>Curso en Línea
                                 </small>
                             {% endif %}
-                        {% elif b.event.event_type == "EVENT" %}
-                            {% if b.event.is_recurrent %}
+                        {% elif b.0.event.event_type == "EVENT" %}
+                            {% if b.0.event.is_recurrent %}
                                 <small class="text-muted">
                                     <i class="fa fa-calendar mr-2" aria-hidden="true"></i>Evento Recurrente
                                 </small>
@@ -44,42 +44,61 @@
                                 </small>
                             {% endif %}
                         {% endif %}
-                        {% if b.event.is_recorded %}
-                                {% if b.event.is_recorded %}
+                        {% if b.0.event.is_recorded %}
+                                {% if b.0.event.is_recorded %}
                                     <small class="text-muted">
-                                        | {{ b.event.date_recorded|date:"SHORT_DATE_FORMAT" }}
+                                        | {{ b.0.event.date_recorded|date:"SHORT_DATE_FORMAT" }}
                                         <i class="fa fa-clock-o mr-2" aria-hidden="true"></i>
                                     </small>
                                 {% endif %}
-                            {% elif b.event.is_recurrent %}
-                                {% if b.event.schedule_description %}
+                            {% elif b.0.event.is_recurrent %}
+                                {% if b.0.event.schedule_description %}
                                     <small class="text-muted">
-                                        | {{ b.event.schedule_description }}
+                                        | {{ b.0.event.schedule_description }}
                                         <i class="fa fa-clock-o mr-2" aria-hidden="true"></i>
                                     </small>
                                 {% endif %}
                             {% else %}
-                                {% if b.event.date_start %}
+                                {% if b.0.event.date_start %}
                                     <small class="text-muted">
-                                    | {{ b.event.date_start|date:"SHORT_DATE_FORMAT" }}
+                                    | {{ b.0.event.date_start|date:"SHORT_DATE_FORMAT" }}
                                     </small>
                                 {% endif %}
-                                {% if b.event.date_end %}
+                                {% if b.0.event.date_end %}
                                     <small class="text-muted">
-                                    - {{ b.event.date_end|date:"SHORT_DATE_FORMAT" }}
+                                    - {{ b.0.event.date_end|date:"SHORT_DATE_FORMAT" }}
                                     <i class="fa fa-clock-o mr-2" aria-hidden="true"></i>
                                     </small>
                                 {% endif %}
                         {% endif %}
                     </p>
                     <ul class="list-unstyled d-flex text-muted mb-2">
+                        {% if b.1 %}  {# Ya solicito un certificado #}
+                            {% if b.1.deleted %}
+                                <li class="mr-3">
+                                    <button id="request_certificate" type="button" data-id="{{ b.0.event.id }}" class="btn btn-success request_certificate">
+                                        <i class="fa fa-certificate"></i> Volver a Solicitar Certificado</button>
+                                </li>
+                                <li class="mr-3">
+                                    <button id="edit_event" type="button" data-id="{{ b.0.event.id }}" class="btn btn-danger delete_bookmark">
+                                    <i class="fa fa-times-circle"></i> Eliminar</button>
+                                </li>
+                            {% else %}
+                                <li class="mr-3">
+                                    <button id="request_certificate" type="button" data-id="{{ b.0.event.id }}" class="btn btn-danger cancel_certificate_request">
+                                        <i class="fa fa-times"></i> Cancelar Solicitud Certificado</button>
+                                </li>
+                            {% endif %}
+                        {% else %}
                         <li class="mr-3">
-                            <button id="edit_event" type="button" class="btn btn-success"><i class="fa fa-certificate"></i> Solicitar Certificado</button>
+                            <button id="request_certificate" type="button" data-id="{{ b.0.event.id }}" class="btn btn-success request_certificate">
+                                <i class="fa fa-certificate"></i> Solicitar Certificado</button>
                         </li>
                         <li class="mr-3">
-                            <button id="edit_event" type="button" data-id="{{ b.event.id }}" class="btn btn-danger delete_bookmark">
+                            <button id="edit_event" type="button" data-id="{{ b.0.event.id }}" class="btn btn-danger delete_bookmark">
                                 <i class="fa fa-times-circle"></i> Eliminar</button>
                         </li>
+                        {% endif %}
                     </ul>
                     </div>
                   </div>
@@ -110,7 +129,42 @@
                             console.log(response);
                         }
                     });
-            })
+            });
+            $(".request_certificate").on("click", function(e){
+                data = {
+                        "event_id": $(this).data("id")
+                    }
+                console.log(data);
+                $.ajax({
+                        method: "post",
+                        url: "{% url 'request_certificate' 0 %}".replace("0", data["event_id"]),
+                        data: data,
+                        success: function(response){
+                            location.reload();
+                        },
+                        error: function(response){
+                            console.log(response);
+                        }
+                    });
+            });
+
+            $(".cancel_certificate_request").on("click", function(e){
+                data = {
+                        "event_id": $(this).data("id")
+                    }
+                console.log(data);
+                $.ajax({
+                        method: "post",
+                        url: "{% url 'cancel_certificate_request' 0 %}".replace("0", data["event_id"]),
+                        data: data,
+                        success: function(response){
+                            location.reload();
+                        },
+                        error: function(response){
+                            console.log(response);
+                        }
+                    });
+            });
         })
     </script>
 {% endblock extra_js %}
